# FFMPEG_NOTE

Linux/FFMPEG_Test/ffmpeg/include/: x264_config.h  x265_config.h
Linux/FFMPEG_Test/ffmpeg/include/SDL2/: SDL_config.h  SDL_revision.h
Linux/FFMPEG_Test/ffmpeg/include/libavutil/: ffversion.h
Linux/FFMPEG_Test/ffmpeg/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la  libfdk-aac.la  libmp3lame.la  libopus.la
Linux/FFMPEG_Test/ffmpeg/lib/cmake/SDL2/: sdl2-config.cmake
Linux/FFMPEG_Test/ffmpeg/lib/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  opus.pc  sdl2.pc  vpx.pc  x264.pc  x265.pc
Linux/FFMPEG_Test/first/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
Linux/FFMPEG_Test/second/: CMakeLists.txt  main.cpp
Linux/TestLib/video/: CMakeLists.txt  avilib.cxx  avilib.h  ffmpeg_decoder.cxx  ffmpeg_decoder.h  image_converter.cxx  image_converter.h  mp4toavi.cxx  mp4toavi.h  video_decoder.cxx  video_decoder.h  video_demuxer.cxx  video_demuxer.h  video_demuxer_manager.cxx  video_demuxer_manager.h  video_demuxerex.cxx  video_demuxerex.h  video_encoder.cxx  video_encoder.h  video_muxer.cxx  video_muxer.h  video_muxerex.cxx  video_muxerex.h  video_transcoder.cxx  video_transcoder.h  video_utils.cxx  video_utils.h  videoconverter.cxx  videoconverter.h
